--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,11 +1,10 @@
 {
-  "singleQuote": true,
-  "useTabs": false,
-  "tabWidth": 2,
-  "printWidth": 90,
-  "trailingComma": "all",
-  "semi": false,
   "arrowParens": "always",
-  "bracketSpacing": false,
-  "quoteProps": "as-needed"
+  "printWidth": 90,
+  "quoteProps": "as-needed",
+  "semi": false,
+  "singleQuote": true,
+  "tabWidth": 2,
+  "trailingComma": "all",
+  "useTabs": false
 }
