--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.1.0",
   "scripts": {
     "dev": "bun --hot ./server/index",
+    "seed": "sequelize db:seed:all",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "maxm",
@@ -17,8 +18,10 @@
   },
   "devDependencies": {
     "@types/bun": "latest",
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "prettier": "^3.2.5",
+    "sequelize-cli": "^6.6.2",
     "typescript": "^5.0.0"
   }
 }
