--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "version": "0.1.0",
   "scripts": {
     "dev": "bun --hot ./server/index",
-    "seed": "sequelize db:seed:all",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "seed": "sequelize db:seed:all"
   },
   "author": "maxm",
   "license": "ISC",
@@ -13,7 +12,6 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "pg": "^8.11.3",
-    "pg-hstore": "^2.3.4",
     "sequelize": "^6.36.0"
   },
   "devDependencies": {
