--- a/package.json
+++ b/package.json
@@ -11,13 +11,21 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "express-fileupload": "^1.4.3",
     "pg": "^8.11.3",
-    "sequelize": "^6.36.0"
+    "reflect-metadata": "^0.2.1",
+    "sequelize": "^6.37.0",
+    "sequelize-typescript": "^2.1.6",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/bun": "latest",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/express-fileupload": "^1.4.4",
+    "@types/node": "^20.11.17",
+    "@types/uuid": "^9.0.8",
+    "@types/validator": "^13.11.9",
     "prettier": "^3.2.5",
     "sequelize-cli": "^6.6.2",
     "typescript": "^5.0.0"
