--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,8 @@
     "jsx": "react-jsx",
     "allowJs": true,
 
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
     "moduleResolution": "bundler",
     "verbatimModuleSyntax": true,
     "noEmit": true,
