--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vshope",
   "private": true,
-  "version": "0.1.0",
+  "version": "0.9.9",
   "scripts": {
     "dev": "bun --hot ./server/index",
     "seed": "sequelize db:seed:all"
@@ -12,6 +12,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "express-fileupload": "^1.4.3",
+    "jsonwebtoken": "^9.0.2",
     "pg": "^8.11.3",
     "reflect-metadata": "^0.2.1",
     "sequelize": "^6.37.0",
@@ -23,6 +24,7 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/express-fileupload": "^1.4.4",
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20.11.17",
     "@types/uuid": "^9.0.8",
     "@types/validator": "^13.11.9",
