--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "reflect-metadata": "^0.2.1",
     "sequelize": "^6.37.0",
     "sequelize-typescript": "^2.1.6",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/bun": "latest",
